--- a/alter_policy_and_confirm.conf
+++ b/alter_policy_and_confirm.conf
@@ -135,6 +135,6 @@ END
 FALLBACK
 	RUN prep_and_run_test_as_user.pl tear_down_all_accounts eucalyptus admin
 	TIMEOUT 1800
-	_POST_COND
+	_POST_COND _gather_logs
 END
 
